--- a/public/templates/public/pre_registration_form.html
+++ b/public/templates/public/pre_registration_form.html
@@ -16,7 +16,7 @@
           <div class="form-group">
             <label class="col-md-3 control-label" >Title<span class="mandatory-star">*<span></label>
             <div class="col-md-6">                     
-              <input id="title" type="textinput" name="title" class="form-control" placeholder="i.e. Iphone 6 black ...">
+              <input id="titleid" type="textinput" name="title" class="form-control" placeholder="i.e. Iphone 6 black ...">
             </div>
           </div>
 
@@ -58,15 +58,15 @@
 
           <!-- File Button --> 
           <div class="form-group">
-            <label class="col-md-3 control-label" for="filebutton">Upload phtoto...</label>
+            <label class="col-md-3 control-label" for="fillebutton">Upload phtoto...</label>
             <div class="col-md-6">
-              <input id="file-upload-input" name="filebutton" multiple class="input-file" type="file">
+              <input id="photos-upload-input" name="filebutton" multiple class="input-file" type="file">
             </div>
           </div>
         </div>
 
         <div class="modal-footer">
-          <input type="button" id="previewButton" name="preview" value="Preview item" class="btn btn-success btn-icon" onClick="uploadData()"/>
+          <input type="button" id="previewButton" name="preview" value="Preview item" class="btn btn-success btn-icon" onClick="previewItem()"/>
         </div>
 
       </form>
@@ -76,13 +76,105 @@
   </div>
 </div>
 
-<div id="pre-register-moda" class="modal fade pre-registration-form" role="dialog">
-  <div class="row">
-    <div class="modal-content  main-panel">
+<div id="preview-modal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
 
-      
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Preview of your item</h4>
+      </div>
+      <div class="modal-body">
 
-      
+        <div class="row">
+          <div class="col-md-12 item-title">
+            <p id="preview_title"></p>
+          </div>
+        </div>
+
+        <div id="preview_photos" class="row">
+
+        </div>
+
+        <div class="row"> 
+          <div class="col-md-6 col-md-offset-1">
+            <p id="preview_desc"></p>                
+          </div>
+        </div>
+
+        <div class="row"> 
+          <div class="col-md-6 col-md-offset-1">
+            <p id="preview_uid"></p>                
+          </div>
+        </div>
+
+      </div>
+
+      <div class="modal-footer">
+        <a class="btn btn-danger btn-icon" onClick="backToEdit()">Edit</a>
+        <input type="button" id="submitButton" name="submit" value="Save item" class="btn btn-success btn-icon" onClick="submitItem()"/>
+      </div>
+
     </div>
+
   </div>
 </div>
+
+<script>
+  
+$("#photos-upload-input").fileinput({
+    uploadUrl: '#', // you must set a valid URL here else you will get an error
+    allowedFileExtensions : ['jpg', 'png','gif'],
+    overwriteInitial: false,
+    maxFileSize: 1000,
+    maxFilesNum: 10,
+    //allowedFileTypes: ['image', 'video', 'flash'],
+    slugCallback: function(filename) {
+        return filename.replace('(', '_').replace(']', '_');
+    }
+});
+
+function uploadData(){
+
+  var ui = $('#uid').val();
+  var category = $('#categoryid').val();
+  var description = $('#descriptionid').val();
+  var tags = $('#tagsid').val();
+  var files = []
+
+  $("img.file-preview-image").each(function( index ) {
+     files.push(JSON.stringify(getBase64Image(this)));
+  });
+
+  console.log(files);
+
+  $.post('/item_registration/',{
+        'uniqueid':   ui,
+        'category':   category,
+        'description':   description,
+        'tags':   tags,
+        'media1':   files[0],
+        'csrfmiddlewaretoken':      $('[name="csrfmiddlewaretoken"]').val()
+    },function(result){
+        if(result.result=='OK'){
+           location.reload();
+        }
+        else{
+          alert("An error has occured while uploading yur file");
+        }
+    });
+}
+
+function getBase64Image(imgElem) {
+// imgElem must be on the same server otherwise a cross-origin error will be thrown "SECURITY_ERR: DOM Exception 18"
+    var canvas = document.createElement("canvas");
+    canvas.width = imgElem.naturalWidth;
+    canvas.height = imgElem.naturalHeight;
+    var ctx = canvas.getContext("2d");
+    ctx.drawImage(imgElem, 0, 0);
+    var dataURL = canvas.toDataURL("image/png");
+    return dataURL.replace(/^data:image\/(png|jpg);base64,/, "");
+}
+
+</script>
