--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -11,11 +11,10 @@
 {% block main_block %}
 
 
-
   <nav class="navbar navbar-custom navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="{% url 'public:index' %}"><img class="icon IBF-icon" src="{% static 'public/img/IBF-icon.png' %}"></img></a>
+        <a class="navbar-brand" href="{% url 'public:index' %}" tabindex="1"><img class="icon IBF-icon" src="{% static 'public/img/IBF-icon.png' %}" alt="IBF logo"></img></a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -47,7 +46,7 @@
             </ul>
           </li>
           <li><p class="navbar-text">{{ user.get_full_name }}</p></li>
-          <li class="dropdown">
+          <li class="dropdown" tabindex="4">
             <a id="menu" href="#" class="dropdown-toggle" data-toggle="dropdown" style="padding:10px;">
               <img class="user-avatar" src="http://www.virginia.edu/foodcollaborative/img/icons/user.jpg"></img>
               <span class="caret"></span>
@@ -63,7 +62,7 @@
           {% else %}
 
           <li>
-            <a href="" class="signin" data-target="#loginModal" data-toggle="modal">Sign in</a>
+            <a href="" class="signin" data-target="#loginModal" data-toggle="modal" tabindex="4">Sign in</a>
           </li>
 
           {% endif %}
