--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -10,24 +10,29 @@
 
 {% block body_block %}
 
+
+<a href="#main-content" class="skip-link" tabindex="2">skip to main content</a>
+<a href="#footer" class="skip-link" tabindex="3">skip to footer content</a>
+
+<div id="main-content">
   <div class="page-top">
     <img class="top" src="{% static 'public/img/top-screen.jpg' %}"></img>
     <div class="action-buttons">
       <div class="row">
         <div class="col-xs-6">
-          <a href="{% url 'search:custom_search' %}" class="a-btn ilost">
+          <a href="{% url 'search:custom_search' %}" class="a-btn ilost" tabindex="5">
             <span class="a-btn-text">I've lost something</span>
           </a>
         </div>
         <div class="col-xs-6">
-          <a href="{% url 'public:item_registration' %}" class="a-btn ifound">
+          <a href="{% url 'public:item_registration' %}" class="a-btn ifound" tabindex="6">
             <span class="a-btn-text">I've found something</span>
           </a>
         </div>
       </div>
     </div>
   </div>
-
+</div>
   <div class="row stories">
     <ul class="stories col-md-10 col-md-offset-1">
       <li class="story col-md-3">
@@ -62,43 +67,59 @@
   </div>
 
   
-  <footer class="footer">
+  <footer id="footer" class="footer">
     <div class="row">
       <div class="col-xs-3">
         <p class="footer-column">About us</p>
         <ul class="">
-          <li class=""><a>What is IBF</a></li>
-          <li class=""><a>Why use our service?<a/></li>
-          <li class=""><a>Our strategy</a></li>
-          <li class=""><a>Terms &amp; Conditions</a></li>
+          <li class=""><a tabindex="7">What is IBF</a></li>
+          <li class=""><a tabindex="8">Why use our service?<a/></li>
+          <li class=""><a tabindex="9">Our strategy</a></li>
+          <li class=""><a tabindex="10">Terms &amp; Conditions</a></li>
         </ul>
       </div>
       <div class="col-xs-3">
         <p class="footer-column">How to:</p>
         <ul class="">
-          <li class=""><a>Register a found item</a></li>
-          <li class=""><a>Look up a lost item<a/></li>
-          <li class=""><a>Return an item</a></li>
-          <li class=""><a>Common tips</a></li>
+          <li class=""><a tabindex="11">Register a found item</a></li>
+          <li class=""><a tabindex="12">Look up a lost item<a/></li>
+          <li class=""><a tabindex="13">Return an item</a></li>
+          <li class=""><a tabindex="14">Common tips</a></li>
         </ul>
       </div>
       <div class="col-xs-3">
         <p class="footer-column">Our App</p>
         <ul class="">
-          <li class=""><a>Android App</a></li>
-          <li class=""><a>IOS App (soon)<a/></li>
-          <li class=""><a>Windows Phone (soon)</a></li>
+          <li class=""><a tabindex="15">Android App</a></li>
+          <li class=""><a tabindex="16">IOS App (soon)<a/></li>
+          <li class=""><a tabindex="17">Windows Phone (soon)</a></li>
         </ul>
       </div>
       <div class="col-xs-3">
         <p class="footer-column">Contact &amp; Support</p>
         <ul class="">
-          <li class=""><a>Tel: 01234566789</a></li>
-          <li class=""><a>Email: info@ibf.com<a/></li>
-          <li class=""><a>Or try our live chat (soon)</a></li>
+          <li class=""><a tabindex="18">Tel: 01234566789</a></li>
+          <li class=""><a tabindex="19">Email: info@ibf.com<a/></li>
+          <li class=""><a tabindex="20">Or try our live chat (soon)</a></li>
+          <li class=""><a tabindex="21">Accessibility support</a></li>
         </ul>
       </div>
     </div>
   </footer>
 
+<script>
+  $( document ).ready(function() {
+
+        $(".skip-link").click(function(event){
+    
+            var skipTo="#"+this.href.split('#')[1];
+    
+            $(skipTo).attr('tabindex', -1).on('blur focusout', function () {
+    
+                $(this).removeAttr('tabindex');
+    
+            }).focus(); 
+        });
+    });
+</script>
 {% endblock %}
