--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -77,5 +77,21 @@
      <!-- <img class="bg" src="{% static 'img/cover.jpg' %}"></img>   -->  
   {% block main_block %}{% endblock %}
 
+  
+  <script>
+    $( document ).ready(function() {
+
+          $(".skip-link").click(function(event){
+      
+              var skipTo="#"+this.href.split('#')[1];
+      
+              $(skipTo).attr('tabindex', -1).on('blur focusout', function () {
+      
+                  $(this).removeAttr('tabindex');
+      
+              }).focus(); 
+          });
+      });
+  </script>
   </body>
   </html>
