--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-custom navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="{% url 'public:index' %}" tabindex="1"><img class="icon IBF-icon" src="{% static 'public/img/IBF-icon.png' %}" alt="IBF logo"></img></a>
+        <a class="navbar-brand" href="{% url 'public:index' %}" tabindex="1" accesskey="h"><img class="icon IBF-icon" src="{% static 'public/img/IBF-icon.png' %}" alt="IBF logo"></img></a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
