--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -20,12 +20,12 @@
     <div class="action-buttons">
       <div class="row">
         <div class="col-xs-6">
-          <a href="{% url 'search:custom_search' %}" class="a-btn ilost" tabindex="5">
+          <a href="{% url 'search:custom_search' %}" class="a-btn ilost" tabindex="5" accesskey="l">
             <span class="a-btn-text">I've lost something</span>
           </a>
         </div>
         <div class="col-xs-6">
-          <a href="{% url 'public:item_registration' %}" class="a-btn ifound" tabindex="6">
+          <a href="{% url 'public:item_registration' %}" class="a-btn ifound" tabindex="6" accesskey="f">
             <span class="a-btn-text">I've found something</span>
           </a>
         </div>
@@ -107,19 +107,4 @@
     </div>
   </footer>
 
-<script>
-  $( document ).ready(function() {
-
-        $(".skip-link").click(function(event){
-    
-            var skipTo="#"+this.href.split('#')[1];
-    
-            $(skipTo).attr('tabindex', -1).on('blur focusout', function () {
-    
-                $(this).removeAttr('tabindex');
-    
-            }).focus(); 
-        });
-    });
-</script>
 {% endblock %}
