pre-register items

--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -90,7 +90,7 @@
       <div class="col-xs-3">
         <p class="footer-column">Our App</p>
         <ul class="">
-          <li class=""><a tabindex="15">Android App</a></li>
+          <li class=""><a href="https://play.google.com/store/apps/details?id=com.phonehalo.itemtracker&hl=en" tabindex="15">Android App</a></li>
           <li class=""><a tabindex="16">IOS App (soon)<a/></li>
           <li class=""><a tabindex="17">Windows Phone (soon)</a></li>
         </ul>
@@ -99,9 +99,9 @@
         <p class="footer-column">Contact &amp; Support</p>
         <ul class="">
           <li class=""><a tabindex="18">Tel: 01234566789</a></li>
-          <li class=""><a tabindex="19">Email: info@ibf.com<a/></li>
+          <li class=""><a href="mailto:info@ibf.com" tabindex="19">Email: info@ibf.com<a/></li>
           <li class=""><a tabindex="20">Or try our live chat (soon)</a></li>
-          <li class=""><a tabindex="21">Accessibility support</a></li>
+          <li class=""><a href="{% url 'public:accessibility_support' %}" tabindex="21">Accessibility support</a></li>
         </ul>
       </div>
     </div>
