--- a/core/static/css/index.css
+++ b/core/static/css/index.css
@@ -393,3 +393,12 @@ ul.stories li:last-child{
 .skip-link:focus{
   top: 50px;
 }
+.stories .panel-title{
+  font: 100 25px/1.3 'Oleo Script', Helvetica, sans-serif;
+}
+.stories .text-muted p{
+  font: 100 18px/1.3 'Merienda One', Helvetica, sans-serif;
+  color: rgba(0,0,0,0.7);
+  text-shadow: 3px 3px 3px #fff;
+  padding:1rem;
+}
