--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -54,6 +54,9 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- Form validation -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/css/bootstrapValidator.min.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merienda+One' rel='stylesheet' type='text/css'>
+
     <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.js"></script>  
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
@@ -77,7 +80,7 @@
      <!-- <img class="bg" src="{% static 'img/cover.jpg' %}"></img>   -->  
   {% block main_block %}{% endblock %}
 
-  
+
   <script>
     $( document ).ready(function() {
 
