--- a/public/templates/public/pre_registration_form.html
+++ b/public/templates/public/pre_registration_form.html
@@ -113,7 +113,7 @@
 
       <div class="modal-footer">
         <a class="btn btn-danger btn-icon" onClick="backToEdit()">Edit</a>
-        <input type="button" id="submitButton" name="submit" value="Save item" class="btn btn-success btn-icon" onClick="submitItem()"/>
+        <input type="button" id="submitButton" name="submit" value="Save item" class="btn btn-success btn-icon" onClick="pre_register_item('{{MEDIA_URL}}')"/>
       </div>
 
     </div>
@@ -135,37 +135,6 @@ $("#photos-upload-input").fileinput({
     }
 });
 
-function uploadData(){
-
-  var ui = $('#uid').val();
-  var category = $('#categoryid').val();
-  var description = $('#descriptionid').val();
-  var tags = $('#tagsid').val();
-  var files = []
-
-  $("img.file-preview-image").each(function( index ) {
-     files.push(JSON.stringify(getBase64Image(this)));
-  });
-
-  console.log(files);
-
-  $.post('/item_registration/',{
-        'uniqueid':   ui,
-        'category':   category,
-        'description':   description,
-        'tags':   tags,
-        'media1':   files[0],
-        'csrfmiddlewaretoken':      $('[name="csrfmiddlewaretoken"]').val()
-    },function(result){
-        if(result.result=='OK'){
-           location.reload();
-        }
-        else{
-          alert("An error has occured while uploading yur file");
-        }
-    });
-}
-
 function getBase64Image(imgElem) {
 // imgElem must be on the same server otherwise a cross-origin error will be thrown "SECURITY_ERR: DOM Exception 18"
     var canvas = document.createElement("canvas");
@@ -175,6 +144,36 @@ function getBase64Image(imgElem) {
     ctx.drawImage(imgElem, 0, 0);
     var dataURL = canvas.toDataURL("image/png");
     return dataURL.replace(/^data:image\/(png|jpg);base64,/, "");
+}
+
+
+function pre_register_item(media_url){
+
+  $.post('/item_pre_registration/',{
+        'uniqueid':   new_item_uid,
+        'category':   new_item_category,
+        'description':   new_item_description,
+        'tags':   new_item_title,
+        'media1':   new_item_files[0],
+        'csrfmiddlewaretoken':      $('[name="csrfmiddlewaretoken"]').val()
+    },function(result){
+        if(result.result=='OK'){
+
+
+          $('#preview-modal').modal('toggle');
+          $('#pre-register-modal').modal('toggle');
+          $('.registered-items').append(
+              '<li class="row registered-item">'+
+                '<div class="col-md-3"><img src="'+result.image+'" class="img-responsive center-block"></img></div>'+
+                '<div class="col-md-6 text-muted"><label class="panel-title" id="s6">'+new_item_title+'</label><hr><p>'+new_item_category+
+                '</p></div><div class="col-md-3 text-right"><label><a id="e6" href="">Update</a></label></div></li>'
+            );
+
+        }
+        else{
+          alert("An error has occured while uploading your file");
+        }
+    });
 }
 
 </script>
