--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -72,10 +72,10 @@
       <div class="col-xs-3">
         <p class="footer-column">About us</p>
         <ul class="">
-          <li class=""><a tabindex="7">What is IBF</a></li>
-          <li class=""><a tabindex="8">Why use our service?<a/></li>
-          <li class=""><a tabindex="9">Our strategy</a></li>
-          <li class=""><a tabindex="10">Terms &amp; Conditions</a></li>
+          <li class=""><a href="{% url 'public:about_us' %}" tabindex="7">What is IBF</a></li>
+          <li class=""><a href="{% url 'public:why_our_services' %}" tabindex="8">Why use our service?<a/></li>
+          <li class=""><a href="{% url 'public:our_strategy' %}" tabindex="9">Our strategy</a></li>
+          <li class=""><a href="{% url 'public:terms_conditions' %}"  tabindex="10">Terms &amp; Conditions</a></li>
         </ul>
       </div>
       <div class="col-xs-3">
