--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -33,7 +33,7 @@
     </div>
   </div>
 </div>
-  <div class="row stories">
+  <div class="row stories no-margin">
     <ul class="stories col-md-10 col-md-offset-1">
       <li class="story col-md-3">
         <div class="text-muted">
