elastic search tweaks

--- a/public/templates/public/accessibility_support.html
+++ b/public/templates/public/accessibility_support.html
@@ -16,12 +16,12 @@
 
 
 <div class="keys-content">
-  <h1 class="text-center">Accessibility Content</h1>
+  <h1 class="text-center">Accessibility Note</h1>
   <br/>
 
   <div class="row">
     <div class="col-sm-6">
-      <h2><strong>Google Chrome</strong></h2>
+      <h2><i class="fa fa-chrome"></i><strong>Google Chrome</strong></h2>
       <h3>Windows &amp; Linux Users:</h3>
       <ul>
         <li>Home : [alt] + h</li>
@@ -44,7 +44,7 @@
       </ul>
       <br/>
 
-      <h2><strong>Opera</strong></h2>
+      <h2><i class="fa fa-opera"></i><strong>Opera</strong></h2>
       <h3>Version 15 or newer:</h3>
       <ul>
         <li>Home : [alt] + h</li>
@@ -67,7 +67,7 @@
       </ul>
       <br/>
 
-      <h2><strong>Internet Explorer</strong></h2>
+      <h2><i class="fa fa-edge"></i><strong>Internet Explorer</strong></h2>
       <h3>Windows Users:</h3>
       <ul>
         <li>Home : [alt] + h</li>
@@ -82,7 +82,7 @@
     </div>
 
     <div class="col-sm-6">
-       <h2><strong>Firefox</strong></h2>
+       <h2><i class="fa fa-firefox"></i><strong>Firefox</strong></h2>
       <h3>Windows &amp; Linux Users:</h3>
       <ul>
         <li>Home : [alt] [Shift]  + h</li>
@@ -105,7 +105,7 @@
       </ul>
       <br/>
 
-      <h2><strong>Safari</strong></h2>
+      <h2><i class="fa fa-safari"></i><strong>Safari</strong></h2>
       <h3>Windows Users:</h3>
       <ul>
         <li>Home : [alt] + h</li>
