--- a/core/static/css/index.css
+++ b/core/static/css/index.css
@@ -55,9 +55,11 @@ body{
 
 /* banner img style */
 img.top {
+  display: block;
   height: 40rem;
   /* Set rules to fill background */
   min-height: 10%;
+  margin: 0 auto;
   margin-top: 50px;
   border-bottom: solid 5px #09451e;
     
