login android user

--- a/public/templates/public/tabs/lost_n_found_items_tab.html
+++ b/public/templates/public/tabs/lost_n_found_items_tab.html
@@ -14,7 +14,7 @@
                 <a class="btn btn-info custom-report-button">View</a>
                 <br/>
                 {% if found_item.status == 'CLAIMED' %}
-                <a onclick="repatriate_item('{{found_item.pk}}')" class="btn btn-primary custom-report-button">Repatriate item</a>
+                <a id="repatriate_button_found_item.pk" onclick="repatriate_item('{{found_item.pk}}')" class="btn btn-primary custom-report-button">Repatriate item</a>
                 {% endif %}
             </label>
         </div>
