--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -16,7 +16,10 @@
 
 <div id="main-content">
   <div class="page-top">
-    <img class="top" src="{% static 'public/img/top-screen.jpg' %}"></img>
+    <div class="top-image">
+      <img class="ibf-logo-big" src="{% static 'public/img/ibf_logo_big.png' %}"/>
+      <p class="connecting-text">Connecting Seekers and Finders</p>
+    </div>
     <div class="action-buttons">
       <div class="row">
         <div class="col-xs-6">
@@ -38,28 +41,28 @@
       <li class="story col-md-3">
         <div class="text-muted">
           <label class="panel-title" id="s6">"Never thought I'd find it"</label>
-          <hr>
+          <hr class="story-line">
           <p>Kate lost her purse in central London this week. Now Mark is her hero after he found the purse and retured it within 24 hours</p>
         </div>
       </li>
       <li class="story col-md-3">
         <div class="text-muted">
           <label class="panel-title" id="s6">Go hard or go with IBF</label>
-          <hr>
+          <hr class="story-line">
           <p>Nicole lost her watch in Asda in November. After trying to determine the place where she lost it she discevered IBF. Surprise, the watch was already online</p>
         </div>
       </li>  
       <li class="story col-md-3">
         <div class="text-muted">
           <label class="panel-title" id="s6">Missing home</label>
-          <hr>
+          <hr class="story-line">
           <p>Johnson's dog BigBoy got lost on a Friday. The Mickelsons found him 9 miles away in their yard. IBF is happy that Johnson got his companion back</p>
         </div>
       </li>  
       <li class="story col-md-3">
         <div class="text-muted">
           <label class="panel-title" id="s6">"I am grateful to IBF"</label>
-          <hr>
+          <hr class="story-line">
           <p>Joe lost his only car key he had. Before taking the car to service she had a look on the IBF website. Joe donated 120£ to the largest homeless center in UK</p>
         </div>
       </li>        
