--- a/core/static/css/index.css
+++ b/core/static/css/index.css
@@ -474,3 +474,10 @@ h4.section-title{
 .no-margin {
   margin: 0;
 }
+
+.gradient-effect{
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(33, 117, 62, 1);
+  background: -webkit-linear-gradient(top, rgba(235, 235, 235, 1) 0%, rgba(33, 117, 62, 1) 100%);
+  background: linear-gradient(to bottom, rgba(235, 235, 235, 1) 0%, rgba(33, 117, 62, 1) 100%);
+}
