fixed something I cant remember

--- a/public/templates/public/home.html
+++ b/public/templates/public/home.html
@@ -102,7 +102,7 @@
         <p class="footer-column">Contact &amp; Support</p>
         <ul class="">
           <li class=""><a tabindex="18">Tel: 01234566789</a></li>
-          <li class=""><a href="mailto:info@ibf.com" tabindex="19">Email: info@ibf.com<a/></li>
+          <li class=""><a href="mailto:contact@ivebeenfound.com" tabindex="19">Email: contact@ivebeenfound.com<a/></li>
           <li class=""><a tabindex="20">Or try our live chat (soon)</a></li>
           <li class=""><a href="{% url 'staticpages:accessibility_support' %}" tabindex="21">Accessibility Note</a></li>
         </ul>
