--- a/core/static/css/index.css
+++ b/core/static/css/index.css
@@ -474,3 +474,10 @@ h4.section-title{
 .no-margin {
   margin: 0;
 }
+
+.no-feedback-icon i{
+  display: none!important;
+}
+.red {
+  color: #a94442;
+}
