search fields equally divided

--- a/search_engine/templates/search_engine/search.html
+++ b/search_engine/templates/search_engine/search.html
@@ -35,20 +35,22 @@
 
         <div class="row">
           <label for="name">Please select a category:</label>
-          <select id="selectbasic" name="category" class="form-control" tabindex="6">
-            <optgroup label="Please select a category">
-              <option value="Accessories">Accessories</option>
-              <option value="Animal">Animal</option>
-              <option value="Bag">Bag</option>
-              <option value="Book">Book</option>
-              <option value="Clothes">Clothes</option>
-              <option value="Container">Container</option>
-              <option value="Electronics">Electronics</option>
-              <option value="Id/cards">Id/cards</option>
-              <option value="Jewellery">Jewellery</option>
-              <option value="Other">Other</option>
-            </optgroup>
-          </select>
+          <div class="form-group">
+            <select id="selectbasic" name="category" class="form-control" tabindex="6">
+              <optgroup label="Please select a category">
+                <option value="Accessories">Accessories</option>
+                <option value="Animal">Animal</option>
+                <option value="Bag">Bag</option>
+                <option value="Book">Book</option>
+                <option value="Clothes">Clothes</option>
+                <option value="Container">Container</option>
+                <option value="Electronics">Electronics</option>
+                <option value="Id/cards">Id/cards</option>
+                <option value="Jewellery">Jewellery</option>
+                <option value="Other">Other</option>
+              </optgroup>
+            </select>
+          </div>
         </div>
 
         <div class="row">
