contact_page updated

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -27,7 +27,7 @@
             <a href="{% url 'staticpages:site_map' %}"  class="smap">Site Map</a>
           </li>
           <li>
-            <a href="" data-target="#modal-item" data-toggle="modal"  class="contact">Contact</a>
+            <a href="{% url 'staticpages:contact_page' %}" class="contact">Contact</a>
           </li>
           <li>
             <a href="{% url 'staticpages:accessibility_support' %}"  class="note">Accessibility Note</a>
